🐛 Fix layout bugs

--- a/sass/components/_functionning.scss
+++ b/sass/components/_functionning.scss
@@ -60,11 +60,11 @@
 .section__h2--functionning {
 	@include desktop {
 		width: 80%;
-		margin: 15px 100px;
+		margin: 15px 130px;
 	}
 }
 .restaurant__section .section__h2 {
 	@include desktop {
-		margin-left: 110px;
+		margin-left: 140px;
 	}
 }
