--- a/sass/layouts/footer.scss
+++ b/sass/layouts/footer.scss
@@ -45,7 +45,7 @@ footer {
 			margin: 22px 30px;
 		}
 		@include desktop {
-			margin: 22px 90px;
+			margin: 22px 50px;
 		}
 	}
 
