--- a/style.css
+++ b/style.css
@@ -147,13 +147,13 @@ span {
 @media (min-width: 1024px) {
   .section__h2--functionning {
     width: 80%;
-    margin: 15px 100px;
+    margin: 15px 130px;
   }
 }
 
 @media (min-width: 1024px) {
   .restaurant__section .section__h2 {
-    margin-left: 110px;
+    margin-left: 140px;
   }
 }
 
@@ -161,6 +161,7 @@ span {
 .restaurant__section {
   background-color: #f6f6f6;
   padding-top: 20px;
+  padding-bottom: 1px;
 }
 
 @media (min-width: 768px) {
@@ -190,7 +191,7 @@ span {
   }
 }
 .photo-restaurant--lanote {
-  object-position: 90% 60%;
+  object-position: 90% 57%;
 }
 
 .new-restaurant {
@@ -213,11 +214,12 @@ span {
 }
 
 .restaurant__section--cards {
+  background-color: white;
   border-bottom-left-radius: 25px;
   border-bottom-right-radius: 25px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 15px;
+  border-top-right-radius: 25px;
+  border-top-left-radius: 25px;
+  margin: 0px 10px 20px 10px;
 }
 .restaurant__section--cards:hover {
   box-shadow: 0px 5px 8px #cecece;
@@ -337,7 +339,7 @@ footer {
 }
 @media (min-width: 1024px) {
   .footer__title {
-    margin: 22px 90px;
+    margin: 22px 50px;
   }
 }
 .footer li {
@@ -358,6 +360,7 @@ footer {
 
 .menu__heading h2 {
   font-family: "Shrikhand", cursive;
+  font-size: 26px;
 }
 
 .menu__heading i {
@@ -502,8 +505,15 @@ footer {
   width: 15%;
   padding: 5px;
 }
-.course-card__price p {
-  margin: 0;
+@media (min-width: 320px) {
+  .course-card__price p {
+    margin: 0px 0px -5px 20px;
+  }
+}
+@media (min-width: 1024px) {
+  .course-card__price p {
+    margin: 0px 0px -5px 40px;
+  }
 }
 .course-card__checkout {
   display: flex;
@@ -556,6 +566,9 @@ footer {
 }
 
 @keyframes disappear {
+  0% {
+    visibility: visible;
+  }
   100% {
     visibility: hidden;
   }
@@ -563,6 +576,7 @@ footer {
 @keyframes spin {
   100% {
     transform: rotate(360deg);
+    visibility: hidden;
   }
 }
 
